Só troquei as font

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <ul class="lista">
                 <li class="lista-baguncada"><a href="https://www.youtube.com/watch?v=fnamLZb9itw" class="musica">
                         Click aqui hehe!</a></li>
+                <li class="lista-baguncada"><a class="musica" href="https://github.com/Kelltynn">Meu GitHub!</a></li>
             </ul>
         </nav>
     </header>
@@ -83,10 +84,10 @@
                         acompanhamos a histório de Sung Jin Woo e seu desempenho para deixar o seu titulo de caçador
                         mais fraco do mundo para trás. Uma história emocionante e cheia de lutas épicas e divertidas de
                         se ver.</strong></p>
-                <a href="https://mangalivre.net/manga/solo-leveling/7702" target="_blank" class="solo"> Clique para
-                    conhecer!</a>
             </li>
         </ul>
+        <a href="https://mangalivre.net/manga/solo-leveling/7702" target="_blank" class="solo"> Clique para
+            conhecer!</a>
     </section>
     <h2 class="titulos_secao">Protagonista</h2>
     <section class="cards_protagonista">
@@ -123,8 +124,8 @@
 
                 <img src="./Imagem/Park Kyung-Hye.jpg" alt="mãe do sung" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="sem_rank">Sem Rank</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Sem Rank</li>
                     <li class="forma_de_luta">Nenhuma</li>
                 </ul>
 
@@ -142,8 +143,8 @@
 
                 <img src="./Imagem/Sung IL-Hwan.jpg" alt="irmã do sung" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="rank_ss">Rank-SS</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Rank-SS</li>
                     <li class="forma_de_luta">Adagas</li>
                 </ul>
 
@@ -163,8 +164,8 @@
 
                 <img src="./Imagem/Jin-Ah2.png" alt="irmã do sung" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="sem_rank">Sem Rank</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Sem Rank</li>
                     <li class="forma_de_luta">Nenhuma</li>
                 </ul>
 
@@ -184,8 +185,8 @@
 
                 <img src="./Imagem/cha_hae-in2.jpg" alt="esposa do sung jin woo" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="rank_s">Rank-S</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Rank-S</li>
                     <li class="forma_de_luta">Espadas</li>
                 </ul>
 
@@ -202,8 +203,8 @@
 
                 <img src="./Imagem/yoo jin-ho2.jpg" alt="melhor amigo do sung" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="rank_d">Rank-D</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Rank-D</li>
                     <li class="forma_de_luta">Picareta</li>
                 </ul>
 
@@ -224,8 +225,8 @@
 
                 <img src="./Imagem/estatua2.PNG" alt="inimigo" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="rank_s">Deus</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Deus</li>
                     <li class="forma_de_luta">Punhos</li>
                 </ul>
 
@@ -241,8 +242,8 @@
 
                 <img src="./Imagem/Hwang Dong-Su.jpg" alt="inimigo" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="rank_s">Rank-S</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Rank-S</li>
                     <li class="forma_de_luta">Punhos</li>
                 </ul>
 
@@ -260,8 +261,8 @@
 
                 <img src="./Imagem/Monarca do Gelo.jpg" alt="inimigo" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="monarca">Monarca</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Monarca</li>
                     <li class="forma_de_luta">Magia</li>
                 </ul>
 
@@ -279,8 +280,8 @@
 
                 <img src="./Imagem/Monarca das Feras2.jpg" alt="inimigo" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="monarca">Monarca</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Monarca</li>
                     <li class="forma_de_luta">Punhos</li>
                 </ul>
 
@@ -298,8 +299,8 @@
 
                 <img src="./Imagem/Monarca dos Insetos.jpg" alt="inimigo" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="monarca">Monarca</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Monarca</li>
                     <li class="forma_de_luta">Pragas</li>
                 </ul>
 
@@ -316,8 +317,8 @@
 
                 <img src="./Imagem/Monarca das Chamas Brancas2.PNG" alt="inimigo" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="monarca">Monarca</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Monarca</li>
                     <li class="forma_de_luta">Adagas</li>
                 </ul>
 
@@ -334,8 +335,8 @@
 
                 <img src="./Imagem/Monarca dos Gigantes2.jpg" alt="inimigo" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="monarca">Monarca</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Monarca</li>
                     <li class="forma_de_luta">Desconhecida</li>
                 </ul>
 
@@ -357,8 +358,8 @@
 
                 <img src="./Imagem/igris2.PNG" alt="sombra" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="rank_ss">Rank-SS</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Rank-SS</li>
                     <li class="forma_de_luta">Espadas</li>
                 </ul>
 
@@ -376,8 +377,8 @@
 
                 <img src="./Imagem/Beru2.PNG" alt="sombra" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="rank_ss">Rank-SS</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Rank-SS</li>
                     <li class="forma_de_luta">Garras</li>
                 </ul>
 
@@ -395,8 +396,8 @@
 
                 <img src="./Imagem/Iron.PNG" alt="sombra" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="rank_ss">Rank-A</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Rank-A</li>
                     <li class="forma_de_luta">Machado</li>
                 </ul>
 
@@ -414,8 +415,8 @@
 
                 <img src="./Imagem/Tank.PNG" alt="sombra" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="rank_ss">Rank-A</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Rank-A</li>
                     <li class="forma_de_luta">Garras</li>
                 </ul>
 
@@ -432,8 +433,8 @@
 
                 <img src="./Imagem/Greed.PNG" alt="sombra" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="rank_ss">Rank-S</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Rank-S</li>
                     <li class="forma_de_luta">Punhos</li>
                 </ul>
 
@@ -450,8 +451,8 @@
 
                 <img src="./Imagem/Bellion.PNG" alt="sombra" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="rank_ss">Rank-SS</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Rank-SS</li>
                     <li class="forma_de_luta">Espadas</li>
                 </ul>
 
@@ -469,8 +470,8 @@
 
                 <img src="./Imagem/Wyvern.PNG" alt="sombra" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="rank_ss">Rank-S</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Rank-S</li>
                     <li class="forma_de_luta">Magia</li>
                 </ul>
 
@@ -487,8 +488,8 @@
 
                 <img src="./Imagem/ashborn.PNG" alt="sombra" class="imagem_png">
 
-                <ul class="ranks">
-                    <li class="monarca">Monarca</li>
+                <ul class="ranks_cards">
+                    <li class="ranks">Monarca</li>
                     <li class="forma_de_luta">Necromancia</li>
                 </ul>
 
