--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             class="botao_seja_bem_vindo"><img src="./Imagem/logo2.PNG" alt="logo github" class="logo_principal"></a>
         <nav class="navegacao">
             <ul class="lista">
-                <li class="lista-baguncada"><a href="https://www.youtube.com/watch?v=fnamLZb9itw" class="musica">
+                <li class="lista-baguncada"><a href="https://www.youtube.com/watch?v=fnamLZb9itw" target="_blank" class="musica">
                         Click aqui hehe!</a></li>
-                <li class="lista-baguncada"><a class="musica" href="https://github.com/Kelltynn">Meu GitHub!</a></li>
+                <li class="lista-baguncada"><a class="musica" href="https://github.com/Kelltynn" target="_blank">Meu GitHub!</a></li>
             </ul>
         </nav>
     </header>
